feat: Change generate of theoretical latex to static paths

--- a/theoretical/Counting Problems/Burnside's Lemma.tex
+++ b/theoretical/Counting Problems/Burnside's Lemma.tex
@@ -10,7 +10,7 @@ $$\texttt{fix}(g) = \{x \in X : gx = x\}$$
 \textbf{Example:} With $k$ distinct types of beads how many distinct necklaces of size $n$ can be made? Considering that two necklaces are equal if the rotation of one gives the other.
 
 \begin{center}
-\includegraphics[scale=.6, keepaspectratio]{../theoretical/img/Burnside.png}
+\includegraphics[scale=.6, keepaspectratio]{theoretical/img/Burnside.png}
 \end{center}
 
 \begin{align*}
