--- a/generate_latex/theoretical.tex
+++ b/generate_latex/theoretical.tex
@@ -66,36 +66,36 @@
 
 \begin{document}
 \maketitle\section{Bitwise}
-\input{../theoretical/Bitwise/general.tex}
-\input{../theoretical/Bitwise/XOR from 1 to N.tex}
+\input{theoretical/Bitwise/general.tex}
+\input{theoretical/Bitwise/XOR from 1 to N.tex}
 \section{C++}
-\input{../theoretical/C++/general.tex}
-\input{../theoretical/C++/Pragma optimize.tex}
-\input{../theoretical/C++/Ordered set and multiset.tex}
-\input{../theoretical/C++/Optimized unordered map.tex}
-\input{../theoretical/C++/Interactive Problems.tex}
-\input{../theoretical/C++/Input by file.tex}
+\input{theoretical/C++/general.tex}
+\input{theoretical/C++/Pragma optimize.tex}
+\input{theoretical/C++/Ordered set and multiset.tex}
+\input{theoretical/C++/Optimized unordered map.tex}
+\input{theoretical/C++/Interactive Problems.tex}
+\input{theoretical/C++/Input by file.tex}
 \section{Constants}
-\input{../theoretical/Constants/general.tex}
+\input{theoretical/Constants/general.tex}
 \section{Counting Problems}
-\input{../theoretical/Counting Problems/Burnside's Lemma.tex}
+\input{theoretical/Counting Problems/Burnside's Lemma.tex}
 \section{Geometry}
 \section{Identities}
-\input{../theoretical/Identities/general.tex}
+\input{theoretical/Identities/general.tex}
 \section{Math}
-\input{../theoretical/Math/trigonometry.tex}
-\input{../theoretical/Math/logarithm.tex}
+\input{theoretical/Math/trigonometry.tex}
+\input{theoretical/Math/logarithm.tex}
 \section{Notes}
-\input{../theoretical/Notes/general.tex}
+\input{theoretical/Notes/general.tex}
 \section{Number Theory}
-\input{../theoretical/Number Theory/general.tex}
-\input{../theoretical/Number Theory/Sum of digits of N written in base b.tex}
-\input{../theoretical/Number Theory/Some Primes.tex}
-\input{../theoretical/Number Theory/Prime counting function.tex}
-\input{../theoretical/Number Theory/Number of Divisors.tex}
-\input{../theoretical/Number Theory/Large Prime Gaps.tex}
-\input{../theoretical/Number Theory/Fermat's Theorem.tex}
-\input{../theoretical/Number Theory/Diophantine Equations.tex}
+\input{theoretical/Number Theory/general.tex}
+\input{theoretical/Number Theory/Sum of digits of N written in base b.tex}
+\input{theoretical/Number Theory/Some Primes.tex}
+\input{theoretical/Number Theory/Prime counting function.tex}
+\input{theoretical/Number Theory/Number of Divisors.tex}
+\input{theoretical/Number Theory/Large Prime Gaps.tex}
+\input{theoretical/Number Theory/Fermat's Theorem.tex}
+\input{theoretical/Number Theory/Diophantine Equations.tex}
 \section{Python}
 
 \end{document}
