--- a/generate_latex/notebook.tex
+++ b/generate_latex/notebook.tex
@@ -69,3 +69,19 @@
 
 \newpage
 
+\section{DP}
+\includes{Edit Distance}{code/dp/edit_distance.cpp}
+\includes{Knapsack}{code/dp/knapsack.cpp}
+\section{DS}
+\includes{Dsu}{code/ds/dsu.cpp}
+\includes{Ordered Set}{code/ds/ordered_set.cpp}
+\section{General}
+\includes{Base Converter}{code/general/base_converter.cpp}
+\includes{Random}{code/general/random.cpp}
+\includes{Split}{code/general/split.cpp}
+\includes{Template}{code/general/template.cpp}
+\section{Graph}
+\includes{Dfs}{code/graph/dfs.cpp}
+
+\end{multicols}
+\end{document}
