feat: Added INT_MIN and INT_MAX constants to theoretical

--- a/theoretical/Constants/general.tex
+++ b/theoretical/Constants/general.tex
@@ -9,3 +9,7 @@ MOD = 998'244'353
 \begin{lstlisting}[language=C++]
 PI = acos(-1)
 \end{lstlisting}
+
+\begin{lstlisting}[language=C++]
+  INT_MIN \quad INT_MAX \quad INT64_MIN \quad INT64_MAX
+\end{lstlisting}
