fix: Changed name of release

--- a/theoretical/Constants/general.tex
+++ b/theoretical/Constants/general.tex
@@ -11,5 +11,5 @@ PI = acos(-1)
 \end{lstlisting}
 
 \begin{lstlisting}[language=C++]
-  INT_MIN \quad INT_MAX \quad INT64_MIN \quad INT64_MAX
+  INT_MIN   INT_MAX   INT64_MIN   INT64_MAX
 \end{lstlisting}
