feat: Add xor command

--- a/generate_latex/template_theoretical.tex
+++ b/generate_latex/template_theoretical.tex
@@ -61,6 +61,7 @@
 \newcommand{\lcm}{\mathrm{lcm}}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+\newcommand*\xor{\oplus}
 
 \pagestyle{fancy}
 
