fix: Minors Theoretical fix

--- a/theoretical/Geometry/2D_Shapes.tex
+++ b/theoretical/Geometry/2D_Shapes.tex
@@ -14,7 +14,7 @@ Rectangle: $ hr $
 
 Rhombus:
 \begin{center}
-    \includegraphics[scale=.2, keepaspectratio]{./Theory/images/rhombus.png}
+    \includegraphics[scale=.2, keepaspectratio]{./theoretical/img/rhombus.png}
 \end{center}
 $D$ is the biggest diagonal and $d$ is the smallest diagonal
 $$ A = \dfrac{1}{2} * D * d $$
