--- a/generate_latex/theoretical.tex
+++ b/generate_latex/theoretical.tex
@@ -66,19 +66,18 @@
 \pagestyle{fancy}
 
 \begin{document}
-\maketitle\section{C++}
+\maketitle\section{Notes}
+\input{theoretical/Notes/general.tex}
+\section{C++}
 \input{theoretical/C++/general.tex}
 \input{theoretical/C++/Pragma optimize.tex}
 \input{theoretical/C++/Ordered set and multiset.tex}
 \input{theoretical/C++/Optimized unordered map.tex}
 \input{theoretical/C++/Interactive Problems.tex}
 \input{theoretical/C++/Input by file.tex}
-\section{Notes}
-\input{theoretical/Notes/general.tex}
-\section{Constants}
-\input{theoretical/Constants/general.tex}
-\input{theoretical/Constants/Some Powers of Two.tex}
-\input{theoretical/Constants/Some Factorials.tex}
+\section{Bitwise}
+\input{theoretical/Bitwise/general.tex}
+\input{theoretical/Bitwise/XOR from 1 to N.tex}
 \section{Math}
 \input{theoretical/Math/general.tex}
 \input{theoretical/Math/trigonometry.tex}
@@ -94,13 +93,27 @@
 \input{theoretical/Number Theory/Number of Divisors.tex}
 \input{theoretical/Number Theory/Large Prime Gaps.tex}
 \input{theoretical/Number Theory/Fermat's Theorem.tex}
+\input{theoretical/Number Theory/Divisibility Criteria.tex}
 \input{theoretical/Number Theory/Diophantine Equations.tex}
-\section{Bitwise}
-\input{theoretical/Bitwise/general.tex}
-\input{theoretical/Bitwise/XOR from 1 to N.tex}
-\section{Identities}
-\input{theoretical/Identities/general.tex}
+\section{Constants}
+\input{theoretical/Constants/general.tex}
+\input{theoretical/Constants/Some Powers of Two.tex}
+\input{theoretical/Constants/Some Factorials.tex}
+\section{Progressions}
+\input{theoretical/Progressions/geometric.tex}
+\input{theoretical/Progressions/arithmetic.tex}
 \section{Counting Problems}
 \input{theoretical/Counting Problems/Burnside's Lemma.tex}
+\section{Identities}
+\input{theoretical/Identities/general.tex}
+\section{Geometry}
+\input{theoretical/Geometry/trigonometry.tex}
+\input{theoretical/Geometry/triangle_existance_condition.tex}
+\input{theoretical/Geometry/shoelace.tex}
+\input{theoretical/Geometry/picks_theorem.tex}
+\input{theoretical/Geometry/distances.tex}
+\input{theoretical/Geometry/boundary_points.tex}
+\input{theoretical/Geometry/3D_Shapes.tex}
+\input{theoretical/Geometry/2D_Shapes.tex}
 
 \end{document}
